[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/RotatingDice.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/ui/menu/logo.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/menu/play.png" type="Texture" id=3]
[ext_resource path="res://audio/mus/title.wav" type="AudioStream" id=4]
[ext_resource path="res://sprites/ui/menu/quit.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/menu/settings.png" type="Texture" id=6]
[ext_resource path="res://scripts/menu.gd" type="Script" id=7]
[ext_resource path="res://sprites/ui/menu/menu_bg.png" type="Texture" id=8]
[ext_resource path="res://scenes/Instructions.tscn" type="PackedScene" id=9]

[sub_resource type="World" id=3]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.239216, 0.160784, 0.211765, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 24, 24 )
own_world = true
world = SubResource( 3 )
transparent_bg = true
hdr = false
usage = 3

[node name="RotatingDice" parent="Viewport" instance=ExtResource( 1 )]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Main" type="VBoxContainer" parent="M"]
margin_left = 4.0
margin_top = 4.0
margin_right = 66.0
margin_bottom = 92.0
size_flags_horizontal = 0
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="M/Main"]
margin_right = 62.0
margin_bottom = 6.0
texture = ExtResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="M/Main"]
margin_left = 9.0
margin_top = 26.0
margin_right = 52.0
margin_bottom = 61.0
size_flags_horizontal = 4
custom_constants/separation = 1

[node name="Play" type="Button" parent="M/Main/Buttons"]
margin_right = 43.0
margin_bottom = 11.0
action_mode = 0
text = "PLAY"
icon = ExtResource( 3 )

[node name="Settings" type="Button" parent="M/Main/Buttons"]
margin_top = 12.0
margin_right = 43.0
margin_bottom = 23.0
size_flags_horizontal = 4
toggle_mode = true
action_mode = 0
text = "SETTINGS"
icon = ExtResource( 6 )

[node name="Quit" type="Button" parent="M/Main/Buttons"]
margin_top = 24.0
margin_right = 43.0
margin_bottom = 35.0
action_mode = 0
text = "QUIT"
icon = ExtResource( 5 )

[node name="Settings" type="MarginContainer" parent="M"]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 140.0
margin_bottom = 92.0
mouse_filter = 2
size_flags_horizontal = 9
custom_constants/margin_right = 10

[node name="Buttons" type="VBoxContainer" parent="M/Settings"]
margin_left = 88.0
margin_top = 36.0
margin_right = 126.0
margin_bottom = 51.0
size_flags_horizontal = 8
size_flags_vertical = 4
custom_constants/separation = 1

[node name="Sound" type="Button" parent="M/Settings/Buttons"]
margin_right = 24.0
margin_bottom = 7.0
size_flags_horizontal = 3
action_mode = 0
text = "SOUND: ON"

[node name="Music" type="Button" parent="M/Settings/Buttons"]
margin_top = 8.0
margin_right = 24.0
margin_bottom = 15.0
size_flags_horizontal = 3
action_mode = 0
text = "MUSIC: ON"

[node name="DiceTexture" type="TextureRect" parent="M"]
margin_left = 116.0
margin_top = 68.0
margin_right = 140.0
margin_bottom = 92.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = SubResource( 1 )

[node name="Instruct" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )

[node name="M" type="MarginContainer" parent="Instruct"]
margin_right = 144.0
margin_bottom = 96.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Instructions" parent="Instruct/M" instance=ExtResource( 9 )]
margin_left = 10.0
margin_top = 10.0
margin_right = 134.0
margin_bottom = 55.0

[node name="Accept" type="Button" parent="Instruct/M"]
margin_left = 60.0
margin_top = 79.0
margin_right = 84.0
margin_bottom = 86.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "GOT IT"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "MUS"

[connection signal="pressed" from="M/Main/Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="toggled" from="M/Main/Buttons/Settings" to="." method="_on_settings_toggled"]
[connection signal="pressed" from="M/Main/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="M/Settings/Buttons/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="M/Settings/Buttons/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="Instruct/M/Accept" to="." method="_on_Accept_pressed"]
